[tool.poetry]
name = "pyp-test"
version = "0.1.0"
description = ""
authors = ["Sangyeop Kim <sangykimiv@gmail.com>"]
readme = "README.md"
repository = "https://github.com/psymoney/pyp-test.git"
packages = [
    { include = "test", from = "src", to = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
